fix: header z-index

--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -2,7 +2,7 @@
   color: #fff;
   background-color: #fff;
   position: relative;
-  z-index: 2;
+  z-index: 100;
 
   @media (min-width: @breakpoint-xl) {
     padding: 48px 80px;
